[package]
name = "ynab-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
